<resources>
    <string name="app_name">My CookBook</string>
    <string name="action_my_recipes">My Recipes</string>
    <string name="action_create_recipe">Create a Recipe</string>
    <string name="action_shopping_list">Shopping List</string>
    <string name="action_recipe_categories">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="about_headline">Company History</string>
    <string name="app_text">Welcome</string>
    <string name="app_text2">Store here all your favorite recipes.</string>
    <string name="title_activity_about">About My CookBook</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="content_description">content_description</string>
    <string name="home_screen_icon">home_screen_icon</string>
    <string name="create_recipe">create_recipe</string>
    <string name="add_recipe">Add a recipe</string>
    <string name="import_recipe">import_recipe</string>
    <string name="add_screen_description">Search a recipe on compatible websites and use the import feature</string>
    <string name="add_screen_bottom_text">My CookBook is also</string>
    <string name="action_add_recipe">Add an Internet Recipe</string>
    <string name="action_import_recipe">File Import/Export</string>
    <string name="action_magnify">action_magnify</string>
    <string name="action_menu">action_menu</string>
    <string name="action_menu_down">action_menu_down</string>
    <string name="action_sort_variant">action_sort_variant</string>
    <string name="action_all">All</string>
    <string name="action_search_bar">action_search_bar</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_logout">Logout</string>
    <string name="heading_my_recipes">My Recipes</string>
    <string name="heading_favorites">Favorites</string>
    <string name="heading_explore">Explore</string>
    <string name="heading_summary">SUMMARY</string>
    <string name="heading_ingredients">INGREDIENTS</string>
    <string name="heading_directions">DIRECTIONS</string>
    <string name="rationale_storage">This sample reads images from camera to demonstrate uploading.</string>
    <string name="take_photo_prompt">Upload a Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_or_url">Search or URL</string>
    <string name="lang">Lang</string>
    <string name="site">Site</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="cooking_time">Time</string>
    <string name="servings">Servings</string>
    <string name="about_this_recipe_summary">About this recipe summary...</string>
    <string name="rating">Rating</string>
    <string name="dish_type">Dish Type</string>
    <string name="region">Region</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="save_my_recipe">SAVE MY RECIPE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">SAVE</string>
    <string name="delete_recipe">Are you sure you want to delete this recipe?</string>

    <string-array name="dishType">
        <item>Starter</item>
        <item>Main course</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>

    <string name="facebook_app_id" translatable="false">1759198607667939</string>
    <string name="dish_type_select">Select</string>
    <string name="dish_type_starter">Starter</string>
    <string name="dish_type_main_course">Main course</string>
    <string name="dish_type_dessert">Dessert</string>
    <string name="dish_type_other">Other</string>
    <string name="like">Like</string>
    <string name="what_do_you_want_to_cook_today">What do you want to cook today?</string>
    <string name="update_recipe">Update Recipe</string>
</resources>
