<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="v3.com.mycookbook5.MainActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/home_screen_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/salmon"
            android:baselineAligned="false"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/home_screen_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/home_screen_icon"
                android:src="@drawable/home" />

            <TextView
                android:id="@+id/add_screen_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/add_screen_description"
                android:textColor="@color/colorTextBlack"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/search_or_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@color/colorTextWhite"
                android:text="@string/search_or_url"
                android:textSize="12sp"
                android:textColor="@color/colorTextBrightGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/lang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    android:background="@color/colorTextWhite"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/lang"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextBrightGray" />

                <EditText
                    android:id="@+id/site"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorTextWhite"
                    android:padding="10dp"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:text="@string/site"
                    android:textColor="@color/colorTextBrightGray" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonAddRecipe"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:background="@color/textColorHomeBottomLayout"
                android:onClick="buttonSearchRecipeOnline"
                android:text="@string/search_recipe"
                android:textColor="@color/colorTextWhite"
                android:textSize="16dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/home_screen_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/home_screen_top"
            android:background="@color/backgroundColorHomeBottomLayout"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="50dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:weightSum="3">

            <TextView
                android:id="@+id/add_screen_bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/add_screen_bottom_text"
                android:textColor="@color/colorTextBlack"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>



