<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="v3.com.mycookbook5.RecipeDescriptionActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_timer_grey600_18dp"/>

        <EditText
            android:id="@+id/recipe_description_activity_cooking_time_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/cooking_time"
            android:textColor="@color/colorTextBrightGray"
            android:textSize="18sp"
            android:inputType="number"/>

        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content">-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_account_grey600_18dp"/>

        <EditText
            android:id="@+id/recipe_description_activity_servings_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/servings"
            android:inputType="number"
            android:textColor="@color/colorTextBrightGray"
            android:textSize="18sp"/>
        <!--</android.support.design.widget.TextInputLayout>-->


    </LinearLayout>

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recipe_description_activity_description_edit_text"
    android:hint="@string/about_this_recipe_summary"
    android:textSize="18sp"/>

    <Button
        android:id="@+id/saveDescriptionBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/textColorHomeBottomLayout"
        android:text="@string/save"
        android:textStyle="bold"
        android:padding="0dp"
        android:textColor="@color/colorTextWhite"
        android:textSize="16dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>
