<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:id="@+id/activity_recipe_detail_image_layout">

        <ImageView
            android:id="@+id/activity_recipe_detail_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/backgroundColorHomeBottomLayout"
            android:scaleType="centerCrop"
            android:src="@drawable/recipe_default_item" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_recipe_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/activity_recipe_detail_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/recipe_title"
                android:textColor="#8BC34A"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_recipe_detail_dish_type_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dish_type"
                android:textColor="@color/colorTextBrightGray"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/activity_recipe_detail_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_timer_grey600_18dp" />

                    <TextView
                        android:id="@+id/activity_recipe_detail_cooking_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/cooking_time"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_account_grey600_18dp" />

                    <TextView
                        android:id="@+id/activity_recipe_detail_servings_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/servings"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_heart_grey600_18dp" />

                    <TextView
                        android:id="@+id/activity_recipe_detail_likes_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/like"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/activity_recipe_detail_description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_this_recipe_summary"
                    android:textSize="14sp" />

            </LinearLayout>

            <!--<RatingBar-->
                <!--android:id="@+id/activity_recipe_detail_rating_bar"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:clickable="false"-->
                <!--android:isIndicator="true"-->
                <!--android:numStars="5"-->
                <!--android:paddingTop="5dp"-->
                <!--android:rating="0.0"-->
                <!--android:stepSize="1.0" />-->

            <TextView
                android:id="@+id/activity_recipe_detail_ingredients_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/textBackgroundLightGray"
                android:drawableLeft="@drawable/ic_action_menu"
                android:gravity="fill"
                android:text="@string/ingredients"
                android:textColor="@color/colorTextBrightGray"
                android:textSize="18sp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/ingredients_list_view" />

            <!--<RelativeLayout-->
                <!--android:id="@+id/empty_view_layout"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_margin="10dp"-->
                <!--android:paddingBottom="10dp"-->
                <!--android:background="#ffffff" >-->

            <!--<TextView-->
                <!--android:id="@+id/emptyView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:text="NO MESSAGES AVAILABLE!"-->
                <!--android:textColor="#525252"-->
                <!--android:textSize="12sp"-->
                <!--android:visibility="gone" />-->

            <!--</RelativeLayout>-->
            <TextView
                android:id="@+id/activity_recipe_detail_directions_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/textBackgroundLightGray"
                android:drawableLeft="@drawable/ic_action_menu"
                android:gravity="fill"
                android:text="@string/directions"
                android:textColor="@color/colorTextBrightGray"
                android:textSize="18sp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/directions_list_view"/>

        </LinearLayout>
    </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_recipe_detail_like_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_heart_white_18dp"
            app:layout_anchor="@id/activity_recipe_detail_image_layout"
            app:layout_anchorGravity="bottom|right|end"
            app:backgroundTint="@android:color/holo_red_light"/>

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>





