<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:dividerHeight="1px"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_recipe_image"
        android:layout_width="50dp"
        android:layout_height="115dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        tools:src="@drawable/recipe_default_item" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_recipe_title"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="@color/colorTextBrightGreen"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="My Post" />

        <LinearLayout
            android:id="@+id/create_recipe_activity_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:src="@drawable/ic_timer_grey600_18dp" />

                <TextView
                    android:id="@+id/item_recipe_cooking_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/cooking_time"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:src="@drawable/ic_account_grey600_18dp" />

                <TextView
                    android:id="@+id/item_recipe_servings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/servings"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:src="@drawable/ic_heart_grey600_18dp" />

                <TextView
                    android:id="@+id/item_recipe_like_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    android:textSize="14sp" />

                <!--<RatingBar-->
                <!--android:id="@+id/item_recipe_rating"-->
                <!--style="@style/Base.Widget.AppCompat.RatingBar.Small"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:clickable="true"-->
                <!--android:isIndicator="true"-->
                <!--android:numStars="5"-->
                <!--android:paddingTop="1dp"-->
                <!--android:rating="0.0"-->
                <!--android:stepSize="1.0" />-->

            </LinearLayout>

            <TextView
                android:id="@+id/item_recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_this_recipe_summary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
